--- a/frontend/themes/cash-register/styles.css
+++ b/frontend/themes/cash-register/styles.css
@@ -58,3 +58,24 @@
       --lumo-success-text-color: hsl(159, 61%, 40%);
 
     }
+table.v-sparkline {
+	font-family: Georgia, serif;
+	text-transform: none;
+}
+
+.v-sparkline .v-sparklinecaption {
+	border-bottom: 2px solid #ccc;
+}
+
+.v-sparkline .v-sparklinevalue {
+	border-bottom: 2px solid #69f;
+}
+
+.v-sparkline .v-sparklineminmax {
+	background-color: #444;
+	border-radius: 3px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	padding: 3px;
+	border-bottom: 2px solid #6f9;
+}
